--- a/style.css
+++ b/style.css
@@ -5,3 +5,21 @@ th, td {
 	text-align: center;
 	font-size: 24px;
 }
+
+input {
+	padding: 10px;
+	border: 2px #666 solid;
+	text-align: center;
+	font-size: 24px;
+}
+
+.row {
+  	width: 100%;
+  	display: flex;
+  	flex-direction: row;
+  	justify-content: center;
+}
+
+.block {
+	padding: 20px;
+}
